# fix-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
resources/: FIX43.xml
src/: FixConfig.toml  application.rs  data_dictionary.rs  main.rs  message.rs  network.rs  quickfix_errors.rs  session.rs  types.rs
src/io/: acceptor.rs  mod.rs
src/session/: mod.rs  session_and_state.rs  session_id.rs  session_schedule.rs  session_settings.rs
